---------------------------------------------------------------------------------------------------
Version: 0.11.0
Date: ????
  Features:
    - [area] Added `starting_offset` argument to `area.iterate()`
---------------------------------------------------------------------------------------------------
Version: 0.10.1
Date: 2022-02-24
  Bugfixes:
    - [event] Fixed a crash when passing `nil` to `event.on_nth_tick`
---------------------------------------------------------------------------------------------------
Version: 0.10.0
Date: 2022-02-24
  Features:
    - [direction] Added `direction.from_positions()`
    - [table] Added `table.get_or_insert()`
  Changes:
    - Converted from LDoc to EmmyLua annotations, enabling language server intellisense, but removing the docs website
      - A new website or other solution for online docs will be added someday. For now, in-line documentation was decided to be more beneficial.
    - [area] All constructor functions will automatically call `area.load()` to add the metatable
    - [area] All functions will ensure that any passed areas have `left_top` and `right_bottom` keys, and will automatically convert ones that do not
    - [migration] `migration.on_config_changed()` version migrations table is now optional
---------------------------------------------------------------------------------------------------
Version: 0.9.2
Date: 2021-11-18
  Bugfixes:
    - Fixed the dictionary module not separating dictionaries from separate mods properly
---------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: 2021-11-16
  Bugfixes:
    - Fixed a crash when calling dictionary.load() before dictionary.init() has been able to fire
    - Fixed table.slice() and table.splice() stop-n-from-end being one position off
---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: 2021-11-11
  Features: